--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,18 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
+node_modules
+.pnp
 .pnp.js
 
 # testing
 /coverage
 
 # production
-/dist
+dist
 
 # intellij configs
-.idea/
+.idea
 
 # misc
 #.DS_Store
