--- a/src/pre-start/env/production.env
+++ b/src/pre-start/env/production.env
@@ -1,10 +1,9 @@
-## Environment ##
 NODE_ENV=production
 
 
 ## Server ##
-PORT=8081
-HOST=localhost
+PORT=3001
+
 
 
 ## Setup jet-logger ##
@@ -22,3 +21,7 @@ JWT_SECRET=xxxxxxxxxxxxxx
 COOKIE_SECRET=xxxxxxxxxxxxxx
 # expires in 3 days
 COOKIE_EXP=259200000
+
+##DB
+DB_HOST=db
+DB_PORT=3306
