--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,51 @@
-version: '3.3'
+version: '3.7'
 
 services:
   db:
     image: mysql:5.7
     restart: always
+    container_name: mysql
     environment:
       MYSQL_ROOT_PASSWORD: 12345
+      MYSQL_DATABASE: restaurants
+    networks:
+      - db-back
     ports:
       - "3307:3306"
+    volumes:
+      - db-data:/var/lib/mysql
 
   back:
-    build: ./
-    depends_on:
-      - db
+    image: alexanderukhanov/back
+    restart: always
+    container_name: back
+    networks:
+      - db-back
     ports:
       - "3001:3001"
+    depends_on:
+      - db
+
+  front:
+    image: alexanderukhanov/front
+    restart: always
+    container_name: front
+    networks:
+      - db-back
+    ports:
+      - "3000:3000"
+    depends_on:
+      - back
+
+volumes:
+  db-data:
+
+networks:
+  db-back:
+
 
 #      network_mode: host
 
-# docker-compose должен организовать видимость портов между контейнерами но как?
+# docker-compose должен организовать видимость портов между контейнерами но как?(bridge/host)
 # как в docker-compose создать образ mysql, затем сразу же создать в ней новую БД "restaurants" (через command?)
 # как стянуть 3 контейнера с dockerHub и после чего перейти к их запуску?
