5 spamMW, restaurant likes

--- a/src/pre-start/env/production.env
+++ b/src/pre-start/env/production.env
@@ -23,5 +23,8 @@ COOKIE_SECRET=xxxxxxxxxxxxxx
 COOKIE_EXP=259200000
 
 ##DB
+DB_DATABASE=restaurants
+DB_USER=root
+DB_PASSWORD=12345
 DB_HOST=db
 DB_PORT=3306
