--- a/src/pre-start/env/development.env
+++ b/src/pre-start/env/development.env
@@ -22,4 +22,8 @@ COOKIE_SECRET=xxxxxxxxxxxxxx
 COOKIE_EXP=259200000
 
 ##DB
+DB_DATABASE=restaurants
+DB_USER=root
+DB_PASSWORD=12345
+DB_HOST=localhost
 DB_PORT=3307
