--- a/src/pre-start/env/test.env
+++ b/src/pre-start/env/test.env
@@ -1,9 +1,8 @@
-## Environment ##
 NODE_ENV=test
 
 
 ## Server ##
-PORT=4000
+PORT=3001
 HOST=localhost
 
 
@@ -21,3 +20,10 @@ JWT_SECRET=xxxxxxxxxxxxxx
 COOKIE_SECRET=xxxxxxxxxxxxxx
 # expires in 3 days
 COOKIE_EXP=259200000
+
+##DB
+DB_DATABASE=restaurants
+DB_USER=root
+DB_PASSWORD=12345
+DB_HOST=localhost
+DB_PORT=3307
