--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16.15.0
-      - run: sudo apt-get install -y mysql-client
+      - run: node -v
       - run: npm ci
       - run: npx sequelize-cli db:migrate
       - run: npm test
