--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,6 @@ jobs:
       - run: npm ci
       - run: npx sequelize-cli db:migrate
       - run: npm test
-      - run: docker login -u ${{ ci-cd.DOCKER_USERNAME }} -p ${{ ci-cd.DOCKER_PASSWORD }}
+      - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - run: docker build -t alexanderukhanov/back .
       - run: docker push alexanderukhanov/back
