--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-20.04
+    env:
+      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
     services:
       mysql:
         image: mysql:5.7
@@ -26,6 +29,6 @@ jobs:
       - run: npm ci
       - run: npx sequelize-cli db:migrate
       - run: npm test
-      - run: docker login -u ${{ secrets.ci-cd.DOCKER_USERNAME }} -p ${{ secrets.ci-cd.DOCKER_PASSWORD }}
+      - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
       - run: docker build -t alexanderukhanov/back .
       - run: docker push alexanderukhanov/back
