--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,8 +10,8 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     env:
-      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+      DOCKER_USERNAME: ${{ secrets.ci-cd.DOCKER_USERNAME }}
+      DOCKER_PASSWORD: ${{ secrets.ci-cd.DOCKER_PASSWORD }}
     services:
       mysql:
         image: mysql:5.7
