--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,7 @@ jobs:
       DOCKER_PASSWORD: ${{ secrets.ci-cd.DOCKER_PASSWORD }}
       DOCKER_USERNAME1: ${{ secrets.DOCKER_USERNAME }}
       DOCKER_PASSWORD1: ${{ secrets.DOCKER_PASSWORD }}
+      DOCKER_PASSWORD2: OLEGGGGG
     services:
       mysql:
         image: mysql:5.7
@@ -31,7 +32,7 @@ jobs:
       - run: npm ci
       - run: npx sequelize-cli db:migrate
       - run: npm test
-      - run: echo $DOCKER_USERNAME $DOCKER_PASSWORD $DOCKER_USERNAME1 $DOCKER_PASSWORD1
+      - run: echo $DOCKER_USERNAME $DOCKER_PASSWORD $DOCKER_USERNAME1 $DOCKER_PASSWORD1 &DOCKER_PASSWORD2
       - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
       - run: docker build -t alexanderukhanov/back .
       - run: docker push alexanderukhanov/back
