--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,9 +12,8 @@ jobs:
     env:
       DOCKER_USERNAME: ${{ secrets.ci-cd.DOCKER_USERNAME }}
       DOCKER_PASSWORD: ${{ secrets.ci-cd.DOCKER_PASSWORD }}
-      DOCKER_USERNAME1: ${{ secrets.DOCKER_USERNAME }}
-      DOCKER_PASSWORD1: ${{ secrets.DOCKER_PASSWORD }}
-      DOCKER_PASSWORD2: OLEGGGGG
+      DOCKER_USERNAME1: ${{ context.DOCKER_USERNAME }}
+      DOCKER_PASSWORD1: ${{ context.DOCKER_PASSWORD }}
     services:
       mysql:
         image: mysql:5.7
@@ -32,7 +31,7 @@ jobs:
       - run: npm ci
       - run: npx sequelize-cli db:migrate
       - run: npm test
-      - run: echo $DOCKER_USERNAME $DOCKER_PASSWORD $DOCKER_USERNAME1 $DOCKER_PASSWORD1 &DOCKER_PASSWORD2
+      - run: echo $DOCKER_USERNAME $DOCKER_PASSWORD $DOCKER_USERNAME1 $DOCKER_PASSWORD1
       - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
       - run: docker build -t alexanderukhanov/back .
       - run: docker push alexanderukhanov/back
