--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -48,4 +48,4 @@ jobs:
           host: $SSH_HOST
           username: $SSH_USERNAME
           key: $SSH_KEY
-          script: touch success.txt
+          script: touch success_back.txt
